BTATOW Fixed CSS and HTML to get all the skills displaying properly.

--- a/BattleTech-A-Time-of-War/BattleTech-A-Time-of-War.html
+++ b/BattleTech-A-Time-of-War/BattleTech-A-Time-of-War.html
@@ -428,18 +428,18 @@
 
 <!-- SKILLS -->
 <div class="tab-content tab3 main">
-    <h1>Skills</h1>
-    <div class="skills-headings">
-        <span>Skill</span>
-        <span>Level</span>
-        <span>Links</span>
-        <span>Mod</span>
-        <span>TN/C</span>
-        <span>XP</span>
+    <h3>Skills</h3>
+    <div class="skills-headings skills-container">
+        <span class="skills skill skills-headings left">Skill</span>
+        <span class="skills skills-skill-level">Lvl</span>
+        <span class="skills skills-linked-attributes">Links</span>
+        <!-- <span class="skills skills-modifier">Mod</span> -->
+        <span class="skills skills-tnc">TN/C</span>
+        <span class="skills skills-xp">XP</span>
     </div>
     <fieldset class="repeating_skills">
         <div class="skills-container">
-            <select name="attr_skill" class="skills" title="@{repeating_skills_$id_skill}">
+            <select name="attr_skill" class="skills skill content" title="@{repeating_skills_$id_skill}">
                 <option value="acrobatics_free_fall">Acrobatics/Free-Fall</option>
                 <option value="acrobatics_gymnastics">Acrobatics/Gymnastics</option>
                 <option value="acting">Acting</option>
@@ -537,20 +537,21 @@
                 <option value="training">Training</option>
                 <option value="zerog_operations">Zero-G Operations</option>
             </select>
-            <input type="text" name="attr_sub_skill" class="skills" title="@{repeating_skills_$id_sub_skill}">
-            <span name="attr_skill_level" style="width: 20px" class="skills skills-labels" title="@{repeating_skills_$id_skill_level}"></span>
-            <input type="hidden" name="attr_skill_level" value="0">
-            <span name="attr_skill_linked_attributes" style="width: 75px" class="skills skills-labels" title="@{repeating_skills_$id_skill_linked_attributes}"></span>
-            <input type="hidden" name="attr_skill_linked_attributes" value="RFL">
-            <span name="attr_skill_modifier" style="width: 50px" class="skills skills-labels" title="@{repeating_skills_$id_skill_modifier}"></span>
-            <input type="hidden" name="attr_skill_modifier" value="0">
-            <span name="attr_skill_tnc" style="width: 50px" class="skills skills-labels" title="@{repeating_skills_$id_skill_tnc}"></span>
-            <input type="hidden" name="attr_skill_tnc" value="7 / CB">
-            <input type="hidden" name="attr_target_number" value="7">
-            <input type="number" name="attr_skill_xp" value="20" style="width: 50px" class="skills skills-labels" title="@{repeating_skills_$id_skill_xp}">
+            <input type="text" name="attr_sub_skill" class="skills skill content" title="@{repeating_skills_$id_sub_skill}">
+            <button type="roll" name="roll_skill_check" value="@{skill_roll_value}" class="skill-roll" title="@{repeating_skills_$id_skill_check}">
+                <span name="attr_skill_level" class="skills content skills-labels skills-skill-level" title="@{repeating_skills_$id_skill_level}"></span>
+                <input type="hidden" name="attr_skill_level">
+                <span name="attr_skill_linked_attributes" class="skills content skills-labels skills-linked-attributes" title="@{repeating_skills_$id_skill_linked_attributes}"></span>
+                <input type="hidden" name="attr_skill_linked_attributes">
+                <!-- <span name="attr_skill_modifier" class="skills content skills-labels skills-modifier" title="@{repeating_skills_$id_skill_modifier}"></span> -->
+                <input type="hidden" name="attr_skill_modifier">
+                <span name="attr_skill_tnc" class="skills content skills-labels skills-tnc" title="@{repeating_skills_$id_skill_tnc}"></span>
+                <input type="hidden" name="attr_skill_tnc">
+                <input type="hidden" name="attr_target_number">
+            </button>
+            <input type="number" name="attr_skill_xp" class="skills content skills-labels skills-xp" title="@{repeating_skills_$id_skill_xp}">
             <input type="hidden" name="attr_skill_roll_value" value="Acrobatics/Free-Fall Skill Check
-                                    Margin of Success: [[2d6 + @{skill_modifier}[MOD] - @{target_number}[TN]]]">
-            <button type="roll" name="roll_skill_check" value="@{skill_roll_value}" class="skills skills-labels" title="@{repeating_skills_$id_skill_check}"></button>
+                                        Margin of Success: [[2d6 + @{skill_modifier}[MOD] - @{target_number}[TN]]]">
         </div>
     </fieldset>
 </div>
@@ -819,7 +820,7 @@ function skillXPChanged(eventInfo) {
             .map(linkAtr => getLinkedAttributeDisplayName(linkAtr))
             .join(" + ");
 
-        skillAttributesToSet["repeating_skills_" + id + "skill_tnc"] = skillData.targetNumber + " / " + skillData.complexity;
+        skillAttributesToSet["repeating_skills_" + id + "skill_tnc"] = skillData.targetNumber + "/" + skillData.complexity;
         skillAttributesToSet["repeating_skills_" + id + "target_number"] = skillData.targetNumber;
 
         getAttrs(skillData.linkedAttributes, values => {
