D&D 5E - UC-459 - fix Ravnica's Rakdos (#5033)
* uc-459 fixed Ravnica's Rakdos

* uc-459 removed console log

--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
@@ -7679,12 +7679,13 @@
                         });
                     };
                 });
-                getCompendiumPage(spellsobj, (spellData) => {
+                getCompendiumPage(spellsobj, (compendiumPages) => {
+                    const spellData = (compendiumPages.length === undefined || compendiumPages.length === 1) ? [compendiumPages] : compendiumPages;
                     const innate = (jsonparse(page.data["data-Spells"])[`innate`]) ? jsonparse(page.data["data-Spells"])[`innate`] : false;
                     let existing = {};
                     let update   = [], callbacks = [];
 
-                    spellData.forEach((page) => {
+                   spellData.forEach((page) => {
                         const spell        = page.data;
                         const lvl          = spell["Level"] && spell["Level"] > 0 ? spell["Level"] : "cantrip";
                         const newrowid     = generateRowID();
