UC-372 Starfinder AA blob relink hotfix 2
handling for edge cases in spell/spell-like naming on NPCs.

--- a/Starfinder by Roll20/Starfinder.html
+++ b/Starfinder by Roll20/Starfinder.html
@@ -17066,11 +17066,12 @@ Charmancer overall slide template
                     obj.name = obj.name.replace(/(^|\s+)([a-z])/ig,(match,space,letter)=>{
                         return `${space}${letter.toUpperCase()}`;
                     });
-                    let spellBlob = data.blobs[obj.name]||data.blobs[obj.name.replace(/(.*?)\s*(greater|lesser)\s*(.+)/i,'$1$3 ($2)')];
+                    let altName = obj.name.replace(/\s*\(\s*(?:\d+\s*\/\s*[a-z]+?|at will|constant)\s*\)\s*/i,'');
+                    let spellBlob = data.blobs[altName.replace(/\s*\([a-z\s]+\)\s*/i,'')]||data.blobs[altName.replace(/(.*?)\s*(greater|lesser)\s*(.+)/i,'$1 $3 ($2)').replace(/\s*\([a-z\s]+\)\s*/i,'')];
                     if(spellBlob && data.blobs[`${obj.name} (Level ${obj.level})`]){
                         Object.assign(spellBlob,data.blobs[`${obj.name} (Level ${obj.level})`]);
                     }
-                    TAS.log(`spellBlob for ${obj.name}:`);
+                    TAS.log(`spellBlob for ${obj.name} or ${altName}:`);
                     TAS.log(spellBlob);
                     if(spellBlob){
                         spellBlob.name = obj.name;
@@ -17104,11 +17105,12 @@ Charmancer overall slide template
                     obj.name = obj.name.replace(/(^|\s+)([a-z])/ig,(match,space,letter)=>{
                         return `${space}${letter.toUpperCase()}`;
                     });
-                    let spellBlob = data.blobs[obj.name]||data.blobs[obj.name.replace(/(.*?)\s*(greater|lesser)\s*(.+)/i,'$1$3 ($2)')];
+                    let altName = obj.name.replace(/\s*\(\s*(?:\d+\s*\/\s*[a-z]+?|at will|constant)\s*\)\s*/i,'');
+                    let spellBlob = data.blobs[altName.replace(/\s*\([a-z\s]+\)\s*/i,'')]||data.blobs[altName.replace(/(.*?)\s*(greater|lesser)\s*(.+)/i,'$1 $3 ($2)').replace(/\s*\([a-z\s]+\)\s*/i,'')];
                     if(spellBlob && data.blobs[`${obj.name} (Level ${obj.level})`]){
                         Object.assign(spellBlob,data.blobs[`${obj.name} (Level ${obj.level})`]);
                     }
-                    TAS.log(`spellBlob for ${obj.name}:`);
+                    TAS.log(`spellBlob for ${obj.name} or ${altName}:`);
                     TAS.log(spellBlob);
                     setObj[`repeating_ability_${rowID}_name`] = obj.name;
                     setObj[`repeating_ability_${rowID}_show_options`]=0;
@@ -17142,7 +17144,7 @@ Charmancer overall slide template
                             return m;
                         },{})
                     );
-                    if(spellBlob.Classes){
+                    if(spellBlob && spellBlob.Classes){
                         spellBlob.Classes.replace(/[a-z\s]+\s+(\d+)(?:,[a-z\s]+\s+(\d+))?/,(match,level1,level2)=>{
                             setObj[`repeating_ability_${rowID}_level`] = _.max([level1,level2]);
                         })
