Starfinder (simple) update 050719
Added Gadgeteer's Engineering check to trick attack options

--- a/Starfinder (simple)/Starfinder (simple).html
+++ b/Starfinder (simple)/Starfinder (simple).html
@@ -799,6 +799,7 @@
 			                    <option value="[[d20 + [[@{Bluff}]] ]]" selected>Bluff</option>
 			                    <option value="[[d20 + [[@{Bluff}]] + 4]]">Spy's Bluff</option>
 			                    <option value="[[d20 + [[@{Computers}]] +4]]">Hacker's Computers</option>
+			                    <option value="[[d20 + [[@{Engineering}]] +4]]">Gadgeteer's Engineering</option>
 			                    <option value="[[d20 + [[@{Intimidate}]] ]]">Intimidate</option>
 			                    <option value="[[d20 + [[@{Sense-Motive}]] +4]]">Detective's Sense Motive</option>
 			                    <option value="[[d20 + [[@{Sleight-of-Hand}]] ]]">Thief's Sleight of Hand</option>
