--- a/carbon-2185-quickstart/carbon2185quickstart.html
+++ b/carbon-2185-quickstart/carbon2185quickstart.html
@@ -23,14 +23,17 @@
 					</div>
 					<div class="divTable">
 						<div class="divTableRow">
-							<div class="divTableCell">Experience <input type="number" spellcheck="false" name="attr_experience" class="w20">
+							<div class="divTableCell">
+							Player <input type="text" spellcheck="false" class="w20" name="attr_player_name">
+							Experience <input type="text" spellcheck="false" name="attr_experience" class="w20">
 							Age <input type="text" spellcheck="false" class="w20" name="attr_age"></div>
 						</div>
 					</div>
 					<div class="divTable">
 						<div class="divTableRow">
-							<div class="divTableCell">Player Name <input type="text" spellcheck="false" class="w20" name="attr_player_name">
-							Influence- Street: <input type="number" spellcheck="false" name="attr_influence_street" class="w25p">&nbsp; Corporate: <input type="number" spellcheck="false" name="attr_influence_corporate" class="w25p"><br>
+							<div class="divTableCell">
+							Wonlongs: <input type="text" spellcheck="false" name="attr_wonlongs" class="w75p">&nbsp;
+							Influence- Street: <input type="text" spellcheck="false" name="attr_influence_street" class="w50p">&nbsp; Corporate: <input type="text" spellcheck="false" name="attr_influence_corporate" class="w50p"><br>
 							</div>
 						</div>
 					</div>
@@ -101,12 +104,16 @@
 	<div class="divTable contain">
 		<div class="divTableRow">
 			<div class="divTableCell">
-				<textarea name="hitpoints" class="hpbox" spellcheck="false"></textarea><br>
+				<input type="number" name="attr_hitpoints" class="hp" spellcheck="false"><br>
 				<div class="cntrtxt"><span class="smallft">Hit Points</span></div>
 			</div>
 			<div class="divTableCell">
-				HP MAX:<input type="number" spellcheck="false" name="attr_max_hit_points" class="hp">
-				HIT DIE:<input type="number" spellcheck="false" name="attr_hit_die" class="hp">
+				<input type="number" name="attr_hitpoints_max" class="hp" spellcheck="false"><br>
+				<div class="cntrtxt"><span class="smallft">HP Max</span></div>
+			</div>
+			<div class="divTableCell">
+				<input type="number" spellcheck="false" name="attr_hit_die" class="hp">
+				<div class="cntrtxt"><span class="smallft">Hit Die</span></div>
 			</div>
 			<div class="divTableCell">
 				Success <input type="checkbox" name="attr_death_save_1">-<input type="checkbox" name="attr_death_save_2">-<input type="checkbox" name="attr_death_save_3">-|-<input type="checkbox" name="attr_death_fail_3">-<input type="checkbox" name="attr_death_fail_2">-<input type="checkbox" name="attr_death_fail_1"> Failure<br>
@@ -118,22 +125,31 @@
 	<div class="divTable">
 		<div class="divTableRow">
 			<div class="divTableCell w50 contain">
+			    <div class="cntrtxt">Gear</div>
 				<table class="w100">
-				<tr><td class="w80"><input type="text" spellcheck="false" name="attr_item1" class="w95"></td><td class="w25p"><input type="number" spellcheck="false" name="attr_item1weight" class="w25p"></td></tr>
-				<tr><td class="w80"><input type="text" spellcheck="false" name="attr_item2" class="w95"></td><td class="w25p"><input type="number" spellcheck="false" name="attr_item2weight" class="w25p"></td></tr>
-				<tr><td class="w80"><input type="text" spellcheck="false" name="attr_item3" class="w95"></td><td class="w25p"><input type="number" spellcheck="false" name="attr_item3weight" class="w25p"></td></tr>
-				<tr><td class="w80"><input type="text" spellcheck="false" name="attr_item4" class="w95"></td><td class="w25p"><input type="number" spellcheck="false" name="attr_item4weight" class="w25p"></td></tr>
-				<tr><td class="w80"><input type="text" spellcheck="false" name="attr_item5" class="w95"></td><td class="w25p"><input type="number" spellcheck="false" name="attr_item5weight" class="w25p"></td></tr>
-				<tr><td class="w80"><input type="text" spellcheck="false" name="attr_item6" class="w95"></td><td class="w25p"><input type="number" spellcheck="false" name="attr_item6weight" class="w25p"></td></tr>
-				<tr><td class="w80"><input type="text" spellcheck="false" name="attr_item7" class="w95"></td><td class="w25p"><input type="number" spellcheck="false" name="attr_item7weight" class="w25p"></td></tr>
-				<tr><td class="w80"><input type="text" spellcheck="false" name="attr_item8" class="w95"></td><td class="w25p"><input type="number" spellcheck="false" name="attr_item8weight" class="w25p"></td></tr>
-				<tr><td class="w80"><input type="text" spellcheck="false" name="attr_item9" class="w95"></td><td class="w25p"><input type="number" spellcheck="false" name="attr_item9weight" class="w25p"></td></tr>
+				<tr><td class="w80"><input type="text" spellcheck="false" name="attr_item1" class="w95"></td><td class="w25p"><input type="number" spellcheck="false" name="attr_item1weight" value="0" class="w25p"></td></tr>
+				<tr><td class="w80"><input type="text" spellcheck="false" name="attr_item2" class="w95"></td><td class="w25p"><input type="number" spellcheck="false" name="attr_item2weight" value="0" class="w25p"></td></tr>
+				<tr><td class="w80"><input type="text" spellcheck="false" name="attr_item3" class="w95"></td><td class="w25p"><input type="number" spellcheck="false" name="attr_item3weight" value="0" class="w25p"></td></tr>
+				<tr><td class="w80"><input type="text" spellcheck="false" name="attr_item4" class="w95"></td><td class="w25p"><input type="number" spellcheck="false" name="attr_item4weight" value="0" class="w25p"></td></tr>
+				<tr><td class="w80"><input type="text" spellcheck="false" name="attr_item5" class="w95"></td><td class="w25p"><input type="number" spellcheck="false" name="attr_item5weight" value="0" class="w25p"></td></tr>
+				<tr><td class="w80"><input type="text" spellcheck="false" name="attr_item6" class="w95"></td><td class="w25p"><input type="number" spellcheck="false" name="attr_item6weight" value="0" class="w25p"></td></tr>
+				<tr><td class="w80"><input type="text" spellcheck="false" name="attr_item7" class="w95"></td><td class="w25p"><input type="number" spellcheck="false" name="attr_item7weight" value="0" class="w25p"></td></tr>
+				<tr><td class="w80"><input type="text" spellcheck="false" name="attr_item8" class="w95"></td><td class="w25p"><input type="number" spellcheck="false" name="attr_item8weight" value="0" class="w25p"></td></tr>
+				<tr><td class="w80"><input type="text" spellcheck="false" name="attr_item9" class="w95"></td><td class="w25p"><input type="number" spellcheck="false" name="attr_item9weight" value="0" class="w25p"></td></tr>
+				<tr><td class="w80"><input type="text" spellcheck="false" name="attr_item10" class="w95"></td><td class="w25p"><input type="number" spellcheck="false" name="attr_item10weight" value="0" class="w25p"></td></tr>
+				<tr><td class="w80"><input type="text" spellcheck="false" name="attr_item11" class="w95"></td><td class="w25p"><input type="number" spellcheck="false" name="attr_item11weight" value="0" class="w25p"></td></tr>
+				<tr><td class="w80"><input type="text" spellcheck="false" name="attr_item12" class="w95"></td><td class="w25p"><input type="number" spellcheck="false" name="attr_item12weight" value="0" class="w25p"></td></tr>
+				<tr><td class="w80"><input type="text" spellcheck="false" name="attr_item13" class="w95"></td><td class="w25p"><input type="number" spellcheck="false" name="attr_item13weight" value="0" class="w25p"></td></tr>
+				<tr><td class="w80"><input type="text" spellcheck="false" name="attr_item14" class="w95"></td><td class="w25p"><input type="number" spellcheck="false" name="attr_item14weight" value="0" class="w25p"></td></tr>
+				<tr><td class="w80"><input type="text" spellcheck="false" name="attr_item15" class="w95"></td><td class="w25p"><input type="number" spellcheck="false" name="attr_item15weight" value="0" class="w25p"></td></tr>
+				
+				
 				<tr><td class="w80">Equipment</td><td class="w20"><input type="number" name="attr_combitemweight" placeholder="weight" readonly></td></tr>
 				</table>
 			</div>
 			
 			<div class="divTableCell w50">
-				<div class="contain">
+				<div class="contain" style="min-width: 500px;">
 					<div class="cntrtxt">
 					<table>
                     <tr><td><button type="roll" value='&{template:default} {{name=Attack}} {{Weapon=@{attack_name_1}}} {{Damage Type=@{attack_type_1}}} {{Attack Roll=[[1d20 + @{attack_bonus_1}]]}} {{Damage Roll=[[@{attack_damage_1} + @{attack_dmod_1}]]}}' name='roll_attack_1'></button></td><td class="w45"><input type="text" spellcheck="false" name="attr_attack_name_1" class="w100"></td><td class="w10"><input type="text" spellcheck="false" name="attr_attack_bonus_1" class="w100 inpcntr"></td><td class="w25"><input type="text" spellcheck="false" name="attr_attack_damage_1" class="w50p inpcntr"> + <input type="number" name="attr_attack_dmod_1" class="w25p inpcntr"></td><td><input type="text" name="attr_attack_type_1" class="w75p"></td></tr>
@@ -153,13 +169,13 @@
 				</div>
 				<div class="spacer"></div>
 				<div class="contain">
-					<input type="text" spellcheck="false" name="attr_wonlongs" class="w90"><br>
-					<div class="cntrtxt">Wonlongs</div>
+					<textarea name="attr_info"></textarea>
+					<div class="cntrtxt">Feats and Abilities</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="cntrtxt">www.carbon2185.com ONLINE QUICKSTART CHARACTER SHEET V0.1</div>
+	<div class="cntrtxt">www.carbon2185.com ONLINE QUICKSTART CHARACTER SHEET V0.2</div>
 </div>
 <script type="text/worker">
 var fortchecked=0;
@@ -168,8 +184,8 @@ var mindchecked=0;
 var fortbonus=0;
 var refbonus=0;
 var mindbonus=0;
-on("sheet:load change:fortitude_proficiency change:proficiency_bonus change:reflex_proficiency change:mind_proficiency change:strength change:dexterity change:consitution change:intelligence change:technology change:people change:item1weight change:item2weight change:item3weight change:item4weight change:item5weight change:item6weight change:item7weight change:item8weight change:item9weight", function() {
-   getAttrs(["item1weight", "item2weight", "item3weight", "item4weight", "item5weight", "item6weight", "item7weight", "item8weight", "item9weight", "strength", "dexterity", "constitution", "intelligence", "technology", "people", "reflex_proficiency", "mind_proficiency", "intelligence_proficiency", "fortitude_proficiency", "proficiency_bonus"], function(values) {
+on("sheet:load change:fortitude_proficiency change:proficiency_bonus change:reflex_proficiency change:mind_proficiency change:strength change:dexterity change:consitution change:intelligence change:technology change:people change:item1weight change:item2weight change:item3weight change:item4weight change:item5weight change:item6weight change:item7weight change:item8weight change:item9weight change:item10weight change:item11weight change:item12weight change:item13weight change:item14weight change:item15weight", function() {
+   getAttrs(["item1weight", "item2weight", "item3weight", "item4weight", "item5weight", "item6weight", "item7weight", "item8weight", "item9weight", "item10weight", "item11weight", "item12weight", "item13weight", "item14weight", "item15weight", "strength", "dexterity", "constitution", "intelligence", "technology", "people", "reflex_proficiency", "mind_proficiency", "intelligence_proficiency", "fortitude_proficiency", "proficiency_bonus"], function(values) {
         let fortchecked = parseInt(values.fortitude_proficiency)||0;
         let reflchecked = parseInt(values.reflex_proficiency)||0;
         let mindchecked = parseInt(values.mind_proficiency)||0;
@@ -189,7 +205,7 @@ on("sheet:load change:fortitude_proficiency change:proficiency_bonus change:refl
         const fortbonus = conmod + (fortchecked === 1 ? proficiency_bonus : 0);
         const refbonus = dexmod + (reflchecked === 1 ? proficiency_bonus : 0);
         const mindbonus = intmod + (mindchecked === 1 ? proficiency_bonus : 0);
-        const totweight = parseInt(values.item1weight) + parseInt(values.item2weight) + parseInt(values.item3weight) + parseInt(values.item4weight) + parseInt(values.item5weight) + parseInt(values.item6weight) + parseInt(values.item7weight) + parseInt(values.item8weight) + parseInt(values.item9weight);
+        const totweight = parseInt(values.item1weight) + parseInt(values.item2weight) + parseInt(values.item3weight) + parseInt(values.item4weight) + parseInt(values.item5weight) + parseInt(values.item6weight) + parseInt(values.item7weight) + parseInt(values.item8weight) + parseInt(values.item9weight) + parseInt(values.item10weight) + parseInt(values.item11weight) + parseInt(values.item12weight) + parseInt(values.item13weight) + parseInt(values.item14weight) + parseInt(values.item15weight);
         setAttrs({
             strength_modifier: strmod,
             dexterity_modifier: dexmod,
