--- a/carbon-2185-quickstart/carbon2185quickstart.html
+++ b/carbon-2185-quickstart/carbon2185quickstart.html
@@ -5,7 +5,7 @@
 			<div class="divTableCell">
 				<div class="divTable">
 				<div class="divTableRow">
-					<div class="divTableCell"><img src="logo.png" class="logo" alt="Carbon 2185 A Cyberpunk RPG"></div>
+					<div class="divTableCell">Carbon 2185</div>
 				</div>
 				<div class="divTableRow">
 					<div class="divTableCell">Character Name: <input type="text" spellcheck="false" name="attr_character_name"></div>
