Hot fix to handle feat benefits.

--- a/Starfinder by Roll20/Starfinder.html
+++ b/Starfinder by Roll20/Starfinder.html
@@ -16775,6 +16775,12 @@ Charmancer overall slide template
                     propagates_to: [],
                     default_adds: [],
                     default_value: ''
+                },
+                description: {
+                    data: ['Description'],
+                    propagates_to: [],
+                    default_adds: [],
+                    default_value: ''
                 }
             },
             spell: {
@@ -17061,6 +17067,10 @@ Charmancer overall slide template
             if(data['data-spells']){
                 TAS.log(`processing spells`);
                 data['data-spells']=JSON.parse(data['data-spells']);
+                TAS.log(`spell data:`);
+                TAS.log(data['data-spells']);
+                TAS.log(`blobs:`);
+                TAS.log(data.blobs);
                 _.each(data['data-spells'],(obj)=>{
                     let rowID = generateRowID();
                     obj.name = obj.name.replace(/(^|\s+)([a-z])/ig,(match,space,letter)=>{
@@ -17142,7 +17152,7 @@ Charmancer overall slide template
                             return m;
                         },{})
                     );
-                    if(spellBlob.Classes){
+                    if(spellBlob && spellBlob.Classes){
                         spellBlob.Classes.replace(/[a-z\s]+\s+(\d+)(?:,[a-z\s]+\s+(\d+))?/,(match,level1,level2)=>{
                             setObj[`repeating_ability_${rowID}_level`] = _.max([level1,level2]);
                         })
@@ -17205,6 +17215,7 @@ Charmancer overall slide template
                 rowID = generateRowID();
                 TAS.log(`data:`);
                 TAS.log(data);
+                TAS.log(dropObjs[currentCat]);
             if(data.header!==''){
                 let levelName = data.header.replace(/:(.+)/,' ($1)');
                 Object.assign(levelBlob,data.blobs[levelName]);
@@ -18332,6 +18343,7 @@ Charmancer overall slide template
             },
         };*/
         Object.assign(dropObjs.ability,dropObjs.spell);
+        dropObjs.ability.description.data.push('Benefit');
         _.each([1,2,3,4,5],(num)=>{
             mancerObjs[`classDrops${num}`]=[];
             _.each(mancerObjs.classDrops,(drop)=>{
