Correct attribute labels for Insight and Healing

--- a/Forbidden_Lands/Forbidden_Lands.htm
+++ b/Forbidden_Lands/Forbidden_Lands.htm
@@ -270,14 +270,14 @@
 					<input class="input-number" type="text" name="attr_endurance_total" value="0" title="@{endurance_total}" readonly />				
 				</span>
 				<span data-i18n-list-item="healing">			
-					<button type="action" name="act_dice_pool_healing"><span data-i18n="healing">Healing</span><span class="small-caps" data-i18n="wits-abbr"> [wit]</span></button>
+					<button type="action" name="act_dice_pool_healing"><span data-i18n="healing">Healing</span><span class="small-caps" data-i18n="wits-abbr"> [emp]</span></button>
 					<input class="input-number" type="number" name="attr_healing" value="0" min="0" title="@{healing}" />
 					<input class="input-number" type="text" name="attr_empathy_total" value="0" title="@{empathy_total}" readonly />
 					<span class="equal">=</span>
 					<input class="input-number" type="text" name="attr_healing_total" value="0" title="@{healing_total}" readonly />
 				</span>
 				<span data-i18n-list-item="insight">
-					<button type="action" name="act_dice_pool_insight"><span data-i18n="insight">Insight</span><span class="small-caps" data-i18n="empathy-abbr"> [emp]</span></button>
+					<button type="action" name="act_dice_pool_insight"><span data-i18n="insight">Insight</span><span class="small-caps" data-i18n="empathy-abbr"> [wit]</span></button>
 					<input class="input-number" type="number" name="attr_insight" value="0" min="0" title="@{insight}" />
 					<input class="input-number" type="text" name="attr_wits_total" value="0" title="@{wits_total}" readonly />
 					<span class="equal">=</span>
