--- a/Forbidden_Lands/Forbidden_Lands.htm
+++ b/Forbidden_Lands/Forbidden_Lands.htm
@@ -194,26 +194,27 @@
                 <div class="weapons-box3 column-header"><span data-i18n="grip">Grip</span></div>
                 <div class="weapons-box4 column-header"><span data-i18n="skill">Skill</span></div>
                 <div class="weapons-box5 column-header"><span data-i18n="bonus">Bonus</span></div>
-                <div class="weapons-box6 column-header"><span data-i18n="dmg-abbr">Dmg</span></div>
-                <div class="weapons-box7 column-header"><span data-i18n="range">Range</span></div>
-                <div class="weapons-box8 column-header"><span data-i18n="features">Features</span></div>
-                <div class="weapons-box9">
+                <div class="weapons-box6 column-header"><span data-i18n="max-abbr">Max</span></div>
+                <div class="weapons-box7 column-header"><span data-i18n="dmg-abbr">Dmg</span></div>
+                <div class="weapons-box8 column-header"><span data-i18n="range">Range</span></div>
+                <div class="weapons-box9 column-header"><span data-i18n="features">Features</span></div>
+                <div class="weapons-box10">
                     <fieldset class="repeating_weapons">
                         <div class="weapons-grid">
-                            <button class="weapons-box10 roll-button" type="action" name="act_attack-roll" title="Update Dice Pool">t</button>
-                            <input class="weapons-box11 input" type="text" name="attr_weapon_name" value="" title="@{repeating_weapons_$X_weapon_name}" />                            
-                            <select class="weapons-box12 input" name="attr_weapon_grip" title="@{repeating_weapons_$X_weapon_grip}" title="@{repeating_weapons_$X_weapon_grip}">
+                            <button class="weapons-box11 roll-button" type="action" name="act_attack-roll" title="Update Dice Pool">t</button>
+                            <input class="weapons-box12 input" type="text" name="attr_weapon_name" value="" title="@{repeating_weapons_$X_weapon_name}" />                            
+                            <select class="weapons-box13 input" name="attr_weapon_grip" title="@{repeating_weapons_$X_weapon_grip}" title="@{repeating_weapons_$X_weapon_grip}">
                                 <option data-i18n="not-applicable-abbr" value="n/a">n/a</option>
                                 <option data-i18n="one-hand-abbr" value="1H" selected>1H</option>
                                 <option data-i18n="two-hand-abbr" value="2H">2H</option>
                             </select>
-                            <select class="weapons-box13 input" name="attr_weapon_skill" title="@{repeating_weapons_$X_weapon_skill}">
+                            <select class="weapons-box14 input" name="attr_weapon_skill" title="@{repeating_weapons_$X_weapon_skill}">
                                 <option value="0" selected data-i18n="melee">Melee</option>
                                 <option value="1" data-i18n="marksmanship-abbr">Marks.</option>
                             </select>
-                            <select class="weapons-box14 input" name="attr_weapon_bonus" title="@{repeating_weapons_$X_weapon_bonus}">
-                                <option value="0" selected>0</option>
-                                <option value="1">1</option>
+                            <select class="weapons-box15 input" name="attr_weapon_bonus" title="@{repeating_weapons_$X_weapon_bonus}">
+                                <option value="0">0</option>
+                                <option value="1" selected>1</option>
                                 <option value="2">2</option>
                                 <option value="3">3</option>
                                 <option value="4">4</option>
@@ -226,14 +227,15 @@
                                 <option value="11">11</option>
                                 <option value="12">12</option>
                             </select>
-                            <input class="weapons-box15 input-number" type="number" name="attr_weapon_damage" value="1" min="0" title="@{repeating_weapons_$X_weapon_damage}" />
-                            <select class="weapons-box16 input" name="attr_weapon_range" title="@{repeating_weapons_$X_weapon_range}">
+                            <input class="weapons-box16 input-number" type="number" name="attr_weapon_bonus_max" value="1" min="0" title="@{repeating_weapons_$X_weapon_bonus|max}" />
+                            <input class="weapons-box17 input-number" type="number" name="attr_weapon_damage" value="1" min="0" title="@{repeating_weapons_$X_weapon_damage}" />
+                            <select class="weapons-box18 input" name="attr_weapon_range" title="@{repeating_weapons_$X_weapon_range}">
                                 <option value="Arm" selected data-i18n="arms-length-abbr">Arm's L.</option>
                                 <option value="Near" data-i18n="near">Near</option>
                                 <option value="Short" data-i18n="short">Short</option>
                                 <option value="Long" data-i18n="long">Long</option>
                             </select>
-                            <input class="weapons-box17 input" type="text" name="attr_weapon_features" value="" title="@{repeating_weapons_$X_weapon_features}" />
+                            <input class="weapons-box19 input" type="text" name="attr_weapon_features" value="" title="@{repeating_weapons_$X_weapon_features}" />
                         </div>
                     </fieldset>
                 </div>
@@ -270,14 +272,14 @@
 					<input class="input-number" type="text" name="attr_endurance_total" value="0" title="@{endurance_total}" readonly />				
 				</span>
 				<span data-i18n-list-item="healing">			
-					<button type="action" name="act_dice_pool_healing"><span data-i18n="healing">Healing</span><span class="small-caps" data-i18n="wits-abbr"> [wit]</span></button>
+					<button type="action" name="act_dice_pool_healing"><span data-i18n="healing">Healing</span><span class="small-caps" data-i18n="empathy-abbr"> [emp]</span></button>
 					<input class="input-number" type="number" name="attr_healing" value="0" min="0" title="@{healing}" />
 					<input class="input-number" type="text" name="attr_empathy_total" value="0" title="@{empathy_total}" readonly />
 					<span class="equal">=</span>
 					<input class="input-number" type="text" name="attr_healing_total" value="0" title="@{healing_total}" readonly />
 				</span>
 				<span data-i18n-list-item="insight">
-					<button type="action" name="act_dice_pool_insight"><span data-i18n="insight">Insight</span><span class="small-caps" data-i18n="empathy-abbr"> [emp]</span></button>
+					<button type="action" name="act_dice_pool_insight"><span data-i18n="insight">Insight</span><span class="small-caps" data-i18n="wits-abbr"> [wit]</span></button>
 					<input class="input-number" type="number" name="attr_insight" value="0" min="0" title="@{insight}" />
 					<input class="input-number" type="text" name="attr_wits_total" value="0" title="@{wits_total}" readonly />
 					<span class="equal">=</span>
@@ -530,10 +532,12 @@
                     <div class="shield-box header"><h1 data-i18n="shield-u">SHIELD</h1></div>
                     <div class="shield-box1"></div>
                     <div class="shield-box2 column-header"><span class="small-caps" data-i18n="bonus">Bonus</span></div>
-                    <div class="shield-box3">
+                    <div class="shield-box3 column-header"><span class="small-caps" data-i18n="max-abbr">Max</span></div>
+                    <div class="shield-box4">
                         <div class="shield-grid">
                             <input class="shield-box1 input" type="text" name="attr_shield1_name" value="" title="@{shield1_name}" placeholder="name" />
                             <input class="shield-box2 input-number" type="number" name="attr_shield1_bonus" value="0" min="0" title="@{shield1_bonus}" />
+                            <input class="shield-box3 input-number" type="number" name="attr_shield1_bonus_max" value="0" min="0" title="@{shield1_bonus|max}" />
                         </div>
                         <span style="position: relative;top: 3.1em;left: 5.25em;">
                             <button type="action" name="act_shield-roll" title="Update Dice Pool" data-i18n="shield">Shield</button>
