uc-476: Chronicles of Darkenss by Roll20: Fix three skills that was unselectable by diceroller + minor translation change

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.html
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.html
@@ -570,7 +570,7 @@
             <tr>
                 <td>
                     <input type="checkbox" class="sheet-attr" name="attr_AnimalKen_flag" value="@{AnimalKen}" />
-                    <span class="sheet-attr" data-i18n="animal-ken" >Animal Ken</span>
+                    <span class="sheet-attr" data-i18n="animalken" >Animal Ken</span>
                 </td>
                 <td>
                     <input type="radio" class="sheet-normal sheet-zero" name="attr_AnimalKen" value="-1" checked="checked" /><span></span><input type="radio" class="sheet-normal" name="attr_AnimalKen" value="1" /><span></span><input type="radio" class="sheet-normal" name="attr_AnimalKen" value="2" /><span></span><input type="radio" class="sheet-normal" name="attr_AnimalKen" value="3" /><span></span><input type="radio" class="sheet-normal" name="attr_AnimalKen" value="4" /><span></span><input type="radio" class="sheet-normal" name="attr_AnimalKen" value="5" /><span></span>
@@ -914,7 +914,7 @@
                                     <tr>
                                         <td>
                                             <input type="checkbox" class="sheet-attr" name="attr_Crúac_flag" value="@{Crúac}" />
-                                            <span class="sheet-attr" data-i18n="cruac">Crúac</span>
+                                            <span class="sheet-attr" data-i18n="crúac">Crúac</span>
                                         </td>
                                         <td>
                                             <input type="radio" class="sheet-normal sheet-zero" name="attr_Crúac" value="0" checked="checked" /><span></span><input type="radio" class="sheet-normal" name="attr_Crúac" value="1" /><span></span><input type="radio" class="sheet-normal" name="attr_Crúac" value="2" /><span></span><input type="radio" class="sheet-normal" name="attr_Crúac" value="3" /><span></span><input type="radio" class="sheet-normal" name="attr_Crúac" value="4" /><span></span><input type="radio" class="sheet-normal" name="attr_Crúac" value="5" /><span></span>
@@ -923,7 +923,7 @@
                                     <tr>
                                         <td>
                                             <input type="checkbox" class="sheet-attr" name="attr_ThebanSorcery_flag" value="@{ThebanSorcery}" />
-                                            <span class="sheet-attr" data-i18n="theban-sorcery" >Theban Sorcery</span>
+                                            <span class="sheet-attr" data-i18n="thebansorcery" >Theban Sorcery</span>
                                         </td>
                                         <td>
                                             <input type="radio" class="sheet-normal sheet-zero" name="attr_ThebanSorcery" value="0" checked="checked" /><span></span><input type="radio" class="sheet-normal" name="attr_ThebanSorcery" value="1" /><span></span><input type="radio" class="sheet-normal" name="attr_ThebanSorcery" value="2" /><span></span><input type="radio" class="sheet-normal" name="attr_ThebanSorcery" value="3" /><span></span><input type="radio" class="sheet-normal" name="attr_ThebanSorcery" value="4" /><span></span><input type="radio" class="sheet-normal" name="attr_ThebanSorcery" value="5" /><span></span>
@@ -1994,7 +1994,7 @@
                 <span data-i18n="weaponry">Weaponry</span>({{Weaponry}})<br>
             {{/0wea}}
             {{^0ani}}
-                <span data-i18n="animal-ken">Animal Ken</span>({{AnimalKen}})<br>
+                <span data-i18n="animalken">Animal Ken</span>({{AnimalKen}})<br>
             {{/0ani}}
             {{^0emp}}
                 <span data-i18n="empathy">Empathy</span>({{Empathy}})<br>
@@ -2048,10 +2048,10 @@
                 <span data-i18n="vigor">Vigor</span>({{Vigor}})<br>
             {{/0vigo}}
             {{^0crúa}}
-                <span data-i18n="cruac">Crúac</span>({{Crúac}})<br>
+                <span data-i18n="crúac">Crúac</span>({{Crúac}})<br>
             {{/0crúa}}
             {{^0theb}}
-                <span data-i18n="theban-sorcery">Theban Sorcery</span>({{ThebanSorcery}})<br>
+                <span data-i18n="thebansorcery">Theban Sorcery</span>({{ThebanSorcery}})<br>
             {{/0theb}}
             {{^0deat}}
                 <span data-i18n="death">Death</span>({{Death}})<br>
